fix invisible phone # bug

--- a/style.css
+++ b/style.css
@@ -252,4 +252,8 @@ h2 {
         max-width: 320px;
     }
 
+    .phone {
+        color: #0000
+    }
+
   }
